force-app/main/default/objects/Trigger_Iteration__mdt/Trigger_Iteration__mdt.object-meta.xml
<CustomObject>
    <description>This object stores the number of iterations each trigger needs to run per each object.</description>
    <label>Trigger Iteration</label>
    <pluralLabel>Trigger Iterations</pluralLabel>
</CustomObject>