force-app/main/default/objects/Trigger_Iteration__mdt/fields/Before_Delete_Max__c.field-meta.xml
<CustomField>
    <fullName>Before_Delete_Max__c</fullName>
    <description>Max number of times the trigger would execute in a single transaction.</description>
    <inlineHelpText>Please specify the limit number of transactions for Before delete trigger.</inlineHelpText>
    <label>Before Delete Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>