force-app/main/default/objects/Trigger_Iteration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected true, denotes the activation of the object specific trigger.</description>
    <inlineHelpText>Check the box if you want to activate the trigger.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>